@@ -1,5 +1,12 @@
 2002-05-03  Sam Steingold  <sds@gnu.org>
 
+	fixed bug #[ 550864 ]: cannot use RETURN-FROM in deep nesting
+	[this bug was introduced by the 2001-06-25 patch]
+	* compiler.lisp (note-far-used-block): propagate block to
+	all the enclosing functions, not just the current one
+
+2002-05-03  Sam Steingold  <sds@gnu.org>
+
 	* makemake.in (XCFLAGS) [debug]: add -DDEBUG_OS_ERROR on all
 	platforms, do not add it on win32 when not debugging
 
